kubernetes/timer.yaml
apiVersion: v1
kind: Service
metadata:
  name: timer
spec:
  selector:
    app: timer
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timer
spec:
  replicas: 5
  selector:
    matchLabels:
      app: timer
  template:
    metadata:
      labels:
        app: timer
    spec:
      containers:
        - name: app
          image: szalaigeri/timer:3.0.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
